--- a/writeups/tasks-summary.html
+++ b/writeups/tasks-summary.html
@@ -6,8 +6,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="YOUR NAMES HERE">
-<meta name="dcterms.date" content="2024-11-19">
+<meta name="author" content="Ruizhe Jiang, Sam Su, Sumeng Xu, Jaxon Zhang">
+<meta name="dcterms.date" content="2024-11-20">
 
 <title>Summary of exploratory tasks</title>
 <style>
@@ -57,14 +57,14 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>YOUR NAMES HERE </p>
+             <p>Ruizhe Jiang, Sam Su, Sumeng Xu, Jaxon Zhang </p>
           </div>
   </div>
     
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">November 19, 2024</p>
+      <p class="date">November 20, 2024</p>
     </div>
   </div>
   
@@ -76,7 +76,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="html-scraping" class="level3">
 <h3 class="anchored" data-anchor-id="html-scraping">HTML scraping</h3>
-<p>Using logistic principal component regression did not significantly improve accuracy. While preparing the data for developing the predictive model, the binary classification testing AUC was approximately 0.75, incorporating header information as well as several other details. The improvement was minimal. We also explored changes in performance using the given NLP FNN model, which included a connected layer with 25 neurons (units). Including header content in the model resulted in a small improvement in performance, primarily on the training data. The binary accuracy increased from 0.92 to 0.95, indicating a small improvement in the model’s ability to classify the training data correctly, demonstrating better model fitting. The loss decreased throughout the five epochs, ending at 0.27 compared to 0.31, further indicating improved model fitting. On the other hand, the changes were less pronounced in the validation set. The validation binary accuracy increased slightly but stayed around 0.8, suggesting no significant improvement in the model’s generalization to unseen data. However, the validation loss decreased slightly from 0.83 to 0.79, indicating a minor improvement in performance on the validation set. Overall, including header content seems to enhance the model’s performance on the training data, but its impact on predictive accuracy for unseen data is minimal.</p>
+<p>Using logistic principal component regression did not significantly improve accuracy. Under Unigram model PCA, the AIC is 18. While preparing the data for developing the predictive model, the binary classification testing AUC was approximately 0.75, incorporating header information as well as several other details. The improvement was minimal. We also explored changes in performance using the given NLP FNN model, which included a connected layer with 25 neurons (units). Including header content in the model resulted in a small improvement in performance, primarily on the training data. The binary accuracy increased from 0.92 to 0.95, indicating a small improvement in the model’s ability to classify the training data correctly, demonstrating better model fitting. The loss decreased throughout the five epochs, ending at 0.27 compared to 0.31, further indicating improved model fitting. On the other hand, the changes were less pronounced in the validation set. The validation binary accuracy increased slightly but stayed around 0.8, suggesting no significant improvement in the model’s generalization to unseen data. However, the validation loss decreased slightly from 0.83 to 0.79, indicating a minor improvement in performance on the validation set. Overall, including header content seems to enhance the model’s performance on the training data, but its impact on predictive accuracy for unseen data is minimal.</p>
 </section>
 <section id="bigrams" class="level3">
 <h3 class="anchored" data-anchor-id="bigrams">Bigrams</h3>
@@ -93,6 +93,18 @@ ul.task-list li input[type="checkbox"] {
 <li><p>training epochs</p></li>
 <li><p>predictive accuracy</p></li>
 </ul>
+</section>
+<section id="primary-task-attempt" class="level3">
+<h3 class="anchored" data-anchor-id="primary-task-attempt">Primary Task Attempt</h3>
+<blockquote class="blockquote">
+<p><em>A logistic regression <code>bclass_logreg_pca.ipynb</code> with a slightly modified architecture was developed as well for binary classification. Similar preprocessing techniques were used. The final test accuracy was 80.74% using the metric of weighted F1 score.</em></p>
+</blockquote>
+<p>For the principle logistic regression with modified architecture, - The <code>parse_data()</code> function from <code>preprocessing.R</code> is used in addition to the customized function to capture the headers and paragraphs information from the raw HTML.</p>
+<ul>
+<li><p>All punctuation words and stopped words were removed. Every letters were converted to lower case. Additionally, tokenization and lemmatization were conducted using <code>Spacy</code> package.</p></li>
+<li><p>Different numbers of pronouns were counted and treated as additional features for training the model. Term Frequency-Inverse Term Frequency (tf-idf) vectorization was performed to weight the tokenized unigrams and bigrams. Logit-odds from unigrams after PCA were also treated as one of the numerical features.</p></li>
+</ul>
+<p>For the principal logistic regression with a modified architecture, two logistic principal component regression models with L1 penalty were performed on unigrams and bigrams vectorized data, respectively. Grid search with 5-fold cross-validation was used to determine the optimal regularization parameter and exclude features with lower importance based on their contributions to the covariance matrix. The final principle features were combined with logit-odds from unigrams and numbers of pronouns to form a final <code>X_features</code>.</p>
 </section>
 
 </main>
